<package format="2">
  <name>cras_laser_geometry</name>
  <version>1.1.0</version>
  <description>
    Tools for working with laser scans.
  </description>
  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>
  <license>BSD</license>
  
  <author>Tomas Petricek</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>cras_cpp_common</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  
  <exec_depend>cras_cpp_common</exec_depend>
  <exec_depend>laser_geometry</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <nodelet plugin="${prefix}/cras_laser_geometry_plugins.xml" />
  </export>
</package>

